# winweb

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  ws.rs
static/: index.html
